@@ -1,16 +1,18 @@
 package me.wiefferink.areashop.managers;
 
-import com.google.common.base.Charsets;
 import com.google.common.io.Files;
 import com.sk89q.worldguard.protection.managers.RegionManager;
 import com.sk89q.worldguard.protection.regions.ProtectedRegion;
 import io.github.bakedlibs.dough.blocks.BlockPosition;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
 import me.wiefferink.areashop.AreaShop;
 import me.wiefferink.areashop.MessageBridge;
 import me.wiefferink.areashop.events.ask.AddingRegionEvent;
 import me.wiefferink.areashop.events.ask.DeletingRegionEvent;
 import me.wiefferink.areashop.events.notify.AddedRegionEvent;
 import me.wiefferink.areashop.events.notify.DeletedRegionEvent;
+import me.wiefferink.areashop.features.signs.SignManager;
 import me.wiefferink.areashop.interfaces.WorldGuardInterface;
 import me.wiefferink.areashop.regions.BuyRegion;
 import me.wiefferink.areashop.regions.GeneralRegion;
@@ -32,8 +34,6 @@ import org.bukkit.entity.Player;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.inject.Inject;
-import javax.inject.Singleton;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -43,6 +43,7 @@ import java.io.InputStreamReader;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -52,6 +53,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -77,6 +79,8 @@ public class FileManager extends Manager implements IFileManager {
 	private HashMap<String, Integer> versions = null;
 	private final String versionPath;
 	private final String schemFolder;
+
+	private final SignManager signManager;
 	private final WorldGuardInterface worldGuardInterface;
 	private final MessageBridge messageBridge;
 	private final RegionFactory regionFactory;
@@ -89,12 +93,14 @@ public class FileManager extends Manager implements IFileManager {
 			@Nonnull AreaShop plugin,
 			@Nonnull WorldGuardInterface worldGuardInterface,
 			@Nonnull MessageBridge messageBridge,
-			@Nonnull RegionFactory regionFactory
+			@Nonnull RegionFactory regionFactory,
+			@Nonnull SignManager signManager
 	) {
 		this.plugin = plugin;
 		this.worldGuardInterface = worldGuardInterface;
 		this.messageBridge = messageBridge;
 		this.regionFactory = regionFactory;
+		this.signManager = signManager;
 		regions = new HashMap<>();
 		buys = new HashMap<>();
 		rents = new HashMap<>();
@@ -117,7 +123,11 @@ public class FileManager extends Manager implements IFileManager {
 	public void shutdown() {
 		// Update lastactive time for players that are online now
 		for(GeneralRegion region : this.regions.values()) {
-			Player player = Bukkit.getPlayer(region.getOwner());
+			UUID ownerUuid = region.getOwner();
+			if (ownerUuid == null) {
+				continue;
+			}
+			Player player = Bukkit.getPlayer(ownerUuid);
 			if(player != null) {
 				region.updateLastActiveTime();
 			}
@@ -354,10 +364,10 @@ public class FileManager extends Manager implements IFileManager {
 		}
 		final String key = region.getName().toLowerCase(Locale.ENGLISH);
 		regions.put(key, region);
-		if (region instanceof BuyRegion) {
-			buys.put(key, (BuyRegion) region);
-		} else if (region instanceof RentRegion) {
-			rents.put(key, (RentRegion) region);
+		if (region instanceof BuyRegion buyRegion) {
+			buys.put(key, buyRegion);
+		} else if (region instanceof RentRegion rentRegion) {
+			rents.put(key, rentRegion);
 		}
 		Bukkit.getPluginManager().callEvent(new AddedRegionEvent(region));
 		return event;
@@ -465,8 +475,11 @@ public class FileManager extends Manager implements IFileManager {
 
 		// Delete the signs
 		if(region.getWorld() != null) {
-			for(BlockPosition sign : region.getSignsFeature().signManager().allSignLocations()) {
+			SignManager regionSignManager = region.getSignsFeature().signManager();
+			for(BlockPosition sign : regionSignManager.allSignLocations()) {
 				sign.getBlock().setType(Material.AIR);
+				regionSignManager.removeSign(sign);
+				this.signManager.removeSign(sign);
 			}
 		}
 
@@ -837,8 +850,8 @@ public class FileManager extends Manager implements IFileManager {
 		}
 		// Load default.yml from the plugin folder, and as backup the default one
 		try(
-				InputStreamReader custom = new InputStreamReader(new FileInputStream(defaultFile), Charsets.UTF_8);
-				InputStreamReader normal = new InputStreamReader(plugin.getResource(AreaShop.defaultFile), Charsets.UTF_8)
+				InputStreamReader custom = new InputStreamReader(new FileInputStream(defaultFile), StandardCharsets.UTF_8);
+				InputStreamReader normal = new InputStreamReader(plugin.getResource(AreaShop.defaultFile), StandardCharsets.UTF_8)
 		) {
 			defaultConfig = YamlConfiguration.loadConfiguration(custom);
 			if(defaultConfig.getKeys(false).isEmpty()) {
@@ -878,9 +891,9 @@ public class FileManager extends Manager implements IFileManager {
 		}
 		// Load config.yml from the plugin folder
 		try(
-                InputStreamReader custom = new InputStreamReader(new FileInputStream(configFile), Charsets.UTF_8);
-                InputStreamReader normal = new InputStreamReader(plugin.getResource(AreaShop.configFile), Charsets.UTF_8);
-                InputStreamReader hidden = new InputStreamReader(plugin.getResource(AreaShop.configFileHidden), Charsets.UTF_8)
+                InputStreamReader custom = new InputStreamReader(new FileInputStream(configFile), StandardCharsets.UTF_8);
+                InputStreamReader normal = new InputStreamReader(plugin.getResource(AreaShop.configFile), StandardCharsets.UTF_8);
+                InputStreamReader hidden = new InputStreamReader(plugin.getResource(AreaShop.configFileHidden), StandardCharsets.UTF_8)
 		) {
 			config = YamlConfiguration.loadConfiguration(custom);
 			if(config.getKeys(false).isEmpty()) {
@@ -917,7 +930,7 @@ public class FileManager extends Manager implements IFileManager {
 		File groupFile = new File(groupsPath);
 		if(groupFile.exists() && groupFile.isFile()) {
 			try(
-					InputStreamReader reader = new InputStreamReader(new FileInputStream(groupFile), Charsets.UTF_8)
+					InputStreamReader reader = new InputStreamReader(new FileInputStream(groupFile), StandardCharsets.UTF_8)
 			) {
 				groupsConfig = YamlConfiguration.loadConfiguration(reader);
 			} catch(IOException e) {
@@ -939,7 +952,9 @@ public class FileManager extends Manager implements IFileManager {
 	 */
 	@Override
 	public void loadRegionFiles() {
-		regions.clear();
+		this.regions.clear();
+		this.buys.clear();
+		this.rents.clear();
 		final File file = new File(regionsPath);
 		if(!file.exists()) {
 			if(!file.mkdirs()) {
@@ -971,7 +986,7 @@ public class FileManager extends Manager implements IFileManager {
 				// Load the region file from disk in UTF8 mode
 				YamlConfiguration regionConfig;
 				try(
-						InputStreamReader reader = new InputStreamReader(new FileInputStream(regionFile), Charsets.UTF_8)
+						InputStreamReader reader = new InputStreamReader(new FileInputStream(regionFile), StandardCharsets.UTF_8)
 				) {
 					regionConfig = YamlConfiguration.loadConfiguration(reader);
 					if(regionConfig.getKeys(false).isEmpty()) {
@@ -1037,8 +1052,8 @@ public class FileManager extends Manager implements IFileManager {
 		boolean noWorldRegions = !noWorld.isEmpty();
 		while(!noWorld.isEmpty()) {
 			List<GeneralRegion> toDisplay = new ArrayList<>();
-			String missingWorld = noWorld.get(0).getWorldName();
-			toDisplay.add(noWorld.get(0));
+			String missingWorld = noWorld.getFirst().getWorldName();
+			toDisplay.add(noWorld.getFirst());
 			for(int i = 1; i < noWorld.size(); i++) {
 				if(noWorld.get(i).getWorldName().equalsIgnoreCase(missingWorld)) {
 					toDisplay.add(noWorld.get(i));
